test/errors/e44.gm
Procedure test_nested_sum(G:Graph)
{
    Graph G2;
    //must not compile since default grah is not well-defined
    Node n;
    For(x : G.Nodes) {
	    n = x;
    }

    Node(G) n2 = n;
}
